src/widgets/snapshots/rstv__widgets__button__tests__snapshot_centered.snap
---
source: src/widgets/button.rs
expression: render(&mut b)
---
size: 16x2
cursor: hidden
text:
|      Save     ▄|
|  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀|
attr:
|abbbbbbbbbbbbbba|
|aaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(0,0,0) bg=RGB(0,170,0)
