src/widgets/snapshots/rstv__widgets__button__tests__snapshot_disabled.snap
---
source: src/widgets/button.rs
expression: render(&mut b)
---
size: 10x2
cursor: hidden
text:
|    OK   ▄|
|  ▀▀▀▀▀▀▀▀|
attr:
|abbbbbbbba|
|aaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(85,85,85) bg=RGB(170,170,170)
