src/widgets/snapshots/rstv__widgets__button__tests__snapshot_hotkey_title.snap
---
source: src/widgets/button.rs
expression: render(&mut b)
---
size: 12x2
cursor: hidden
text:
|   Cancel  ▄|
|  ▀▀▀▀▀▀▀▀▀▀|
attr:
|abbcbbbbbbba|
|aaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(0,0,0) bg=RGB(0,170,0)
  c fg=RGB(255,255,85) bg=RGB(0,170,0)
