src/widgets/snapshots/rstv__widgets__button__tests__snapshot_pressed.snap
---
source: src/widgets/button.rs
expression: render(&mut b)
---
size: 10x2
cursor: hidden
text:
|     OK   |
|          |
attr:
|aabbbbbbbb|
|aaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(0,0,0) bg=RGB(0,170,0)
